Se agrego la card

--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -21,6 +21,9 @@
 
 <div *ngIf="paises.length > 0;" class="row">
     <div class="col">
-       <app-pais-tabla [paises]="paises"></app-pais-tabla>
+        <app-pais-tabla *ngIf="tam; else card" class="" [paises]="paises"></app-pais-tabla>
+        <ng-template #card>
+         <app-pais-card [paises]="paises"></app-pais-card>
+        </ng-template>
     </div>
 </div>
