--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -1,8 +1,16 @@
- <form (ngSubmit)="buscar()" autocomplete="off">
-    <input type="text"
-     name="termino"
-     class="form-control"
-      placeholder="{{placeholder}}"
-      [(ngModel)]="termino"
-      (input)="teclaPresionada()"/>
-</form>
+<div class="row p-2">
+      <div class="col-2 d-flex justify-content-center align-self-center">
+            <i class="fas fa-bars" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"></i>
+        </div>
+      <div class="col">
+            <form (ngSubmit)="buscar()" autocomplete="off">
+                  <input type="text"
+                   name="termino"
+                   class="form-control"
+                    placeholder="{{placeholder}}"
+                    [(ngModel)]="termino"
+                    (input)="teclaPresionada()"/>
+              </form>
+      </div>
+      
+</div>
