--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -23,6 +23,9 @@
 
 <div  class="row">
     <div class="col">
-        <app-pais-tabla [paises]="paisesRegion"></app-pais-tabla>
+        <app-pais-tabla *ngIf="tam; else card" class="" [paises]="paisesRegion"></app-pais-tabla>
+        <ng-template #card>
+         <app-pais-card [paises]="paisesRegion"></app-pais-card>
+        </ng-template>
     </div>
 </div>
