--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,18 +1,31 @@
-<h2>Busquedas</h2>
-<hr/>
-<ul class="list-group">
-    <li
-    routerLink=""
-    routerLinkActive="active"
-    [routerLinkActiveOptions]="{ exact: true }"
-    class="list-group-item">Buscar Pais</li>
-    <li 
-    routerLink="region"
-    routerLinkActive="active"
-    class="list-group-item">Por Region</li>
-    <li 
-    routerLink="capital"
-    routerLinkActive="active"
-    class="list-group-item"
-    >Por Capital</li>
-</ul> 
+
+
+
+<div class="offcanvas offcanvas-start bg-dark border-right p-3" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title text-white" id="offcanvasExampleLabel">Busquedas</h5>
+      <i class="fas fa-times" data-bs-dismiss="offcanvas" id="cerrar" aria-label="Close"></i>
+    </div>
+    <hr class="text-white"/>
+    <div class="offcanvas-body">
+        <ul class="list-group">
+            <li
+            data-bs-dismiss="offcanvas"
+            routerLink=""
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="list-group-item">Buscar Pais</li>
+            <li 
+            data-bs-dismiss="offcanvas"
+            routerLink="region"
+            routerLinkActive="active"
+            class="list-group-item">Por Region</li>
+            <li 
+            data-bs-dismiss="offcanvas"
+            routerLink="capital"
+            routerLinkActive="active"
+            class="list-group-item"
+            >Por Capital</li>
+        </ul> 
+    </div>
+  </div>
